# auto_sbv

./: .gitignore  README.md  main.py  pyproject.toml
config/: source_config.yml
src/core/: base_extractor.py  connection_manager.py
src/exception/: __init__.py  config_exception.py  connection_exception.py  etl_exception.py  extract_exception.py  load_exception.py  transform_exception.py  valid_exception.py
src/extractor/: oracle_extractor.py
src/handler/: exception_handler.py
src/util/: config_manager.py  encryption_util.py  logger.py  notification_service.py
