[project]
name = "auto-sbv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "croniter>=6.0.0",
    "oracledb>=3.2.0",
    "pandas>=2.3.1",
    "pyodbc>=5.2.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]
